# cangui

./: CLAUDE.md  PLAN.md  main.py  pyproject.toml
cangui/: app.py  can_bus.py  can_message.py  database_manager.py  dialog_import_dbc.py  model_connection.py  model_project.py  model_rx_filter.py  model_rx_message.py  model_trace.py  model_tx_message.py  model_watch.py  odx_manager.py  options.py  project.py  service_can.py  service_message_dispatcher.py  service_plot_data.py  service_plot_trace.py  service_uds.py  service_workspace.py  signal_decoder.py  trace_reader.py  trace_writer.py  trace_writer_blf.py  ui_diagnostic_window.py  ui_dtc_window.py  ui_help_window.py  ui_main_window.py  ui_plot_list_window.py  ui_plot_window.py  ui_project_window.py  ui_rx_filter_window.py  ui_rx_tx_window.py  ui_settings_window.py  ui_trace_window.py  ui_watch_did_window.py  ui_watch_window.py  widget_signal_selector.py  worker_can_receiver.py  (+3 more)
cangui/core/: can_bus.py  database_manager.py  dbc_manager.py  dtc_manager.py  options.py  project.py  security_loader.py  signal_decoder.py  trace_reader.py  trace_writer.py  uds_client.py
cangui/models/: connection_model.py  project_model.py  rx_message_model.py  trace_model.py  tx_message_model.py  watch_model.py
cangui/services/: can_service.py  message_dispatcher.py  plot_data_service.py  uds_service.py
cangui/ui/: focus_manager.py  main_window.py
cangui/ui/widgets/: signal_selector.py
cangui/workers/: can_receiver.py  can_transmitter.py  trace_player.py  uds_worker.py
test/: fast.json  slow.json  test.dbc  test.odx
(+10 files in other folders)
